--- a/PL/CustomerWindow.xaml
+++ b/PL/CustomerWindow.xaml
@@ -52,8 +52,8 @@
         </DataGrid>
         <Button x:Name="OptionButtun" Content="Button" HorizontalAlignment="Left" Margin="23,350,0,0" VerticalAlignment="Top"  Click="OptionButtun_Click"/>
         <Button x:Name="closeButton" Content="close" HorizontalAlignment="Left" Margin="207,350,0,0" VerticalAlignment="Top" Click="Button_Click_Close"/>
-        <Label Content="Parcels the customer sent:" HorizontalAlignment="Left" Margin="431,10,0,0" VerticalAlignment="Top" Width="244"/>
-        <Label Content="Parcels the customer recieved:" HorizontalAlignment="Left" Margin="417,0,0,0" VerticalAlignment="Center" Width="244"/>
+        <Label  x:Name="parcelsSentLabel" Content="Parcels the customer sent:" HorizontalAlignment="Left" Margin="431,10,0,0" VerticalAlignment="Top" Width="244"/>
+        <Label  x:Name="parcelsResivedLabel" Content="Parcels the customer recieved:" HorizontalAlignment="Left" Margin="417,0,0,0" VerticalAlignment="Center" Width="244"/>
 
     </Grid>
 </Window>
