--- a/PL/StationListWindow.xaml
+++ b/PL/StationListWindow.xaml
@@ -5,8 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="StationListWindow" Height="450" Width="800" Activated="Window_Activated"         Background="{StaticResource MyButtonBackground}">
+        Title="StationListWindow" Height="550" Width="900" Activated="Window_Activated"         Background="{StaticResource MyButtonBackground}">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
+        </Grid.ColumnDefinitions >
         <DataGrid x:Name="stationToListDataGrid" ItemsSource="{Binding}"  AutoGenerateColumns="False" EnableRowVirtualization="True"  Margin="37,81,275,139" RowDetailsVisibilityMode="VisibleWhenSelected" MouseDoubleClick="stationToListDataGrid_MouseDoubleClick">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="nameColumn" Binding="{Binding Name}" Header="Name" Width="SizeToHeader"/>
@@ -17,10 +23,10 @@
                 <DataGridTextColumn x:Name="rservedCharginggSlotsNumberColumn" Binding="{Binding RservedCharginggSlotsNumber}" Header="Reserved Chargingg Slots Number" Width="SizeToHeader"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button  Content="Add New Station" HorizontalAlignment="Left" Margin="600,81,0,0" VerticalAlignment="Top"  Click="OptionButtun_Click"/>
-        <Button x:Name="closeButtun"  Content="Close" HorizontalAlignment="Left" Margin="602,143,0,0" VerticalAlignment="Top"  Click="closeButtun_Click"/>
-        <Button x:Name="groupButtun" Content="Group List" HorizontalAlignment="Left" Margin="604,211,0,0" VerticalAlignment="Top" Click="groupButtun_Click"/>
-        <Button x:Name="clearButtun" Content="clear" HorizontalAlignment="Left" Margin="604,273,0,0" VerticalAlignment="Top" Click="clearButtun_Click"/>
+        <Button  Content="Add New Station" HorizontalAlignment="Left" Margin="687,81,0,0" VerticalAlignment="Top"  Click="OptionButtun_Click"/>
+        <Button x:Name="closeButtun"  Content="Close" HorizontalAlignment="Left" Margin="687,143,0,0" VerticalAlignment="Top"  Click="closeButtun_Click"/>
+        <Button x:Name="groupButtun" Content="Group List" HorizontalAlignment="Left" Margin="687,212,0,0" VerticalAlignment="Top" Click="groupButtun_Click"/>
+        <Button x:Name="clearButtun" Content="clear" HorizontalAlignment="Left" Margin="687,267,0,0" VerticalAlignment="Top" Click="clearButtun_Click"/>
 
     </Grid>
 </Window>
