--- a/PL/Drone.xaml
+++ b/PL/Drone.xaml
@@ -6,6 +6,10 @@
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
         Title="Drone" Height="550" Width="900"  Background="{StaticResource MyButtonBackground}">
+    <Window.Resources>
+        <local:ConvertToColor x:Key="ColorConverter" />
+    </Window.Resources>
+    
     <Grid Margin="50,32,0,-3">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="65*"/>
@@ -37,14 +41,14 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Label x:Name="BatteryLabel" Content="Battery Status:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="2" VerticalAlignment="Center"/>
-                <TextBox x:Name="txtBattery" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="2" Text="{Binding BatteryStatus, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true , StringFormat={}{0:0.00}%}"  VerticalAlignment="Center" Width="120"/>
+                <TextBox x:Name="txtBattery" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="2" Background="{Binding Converter={StaticResource ConvertToColor}}"   Text="{Binding BatteryStatus, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true , StringFormat={}{0:0.00}%}"  VerticalAlignment="Center" Width="120"/>
                 <Label x:Name="StatusLabel" Content="Drone Status:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="1" VerticalAlignment="Center"/>
                 <ComboBox x:Name="StatusComboBox" Grid.Column="1"  Text="{Binding DroneStatus, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}"  HorizontalAlignment="Left" Height="Auto" ItemsSource="{Binding}" Margin="3" Grid.Row="1" VerticalAlignment="Center" Width="120"  />
 
                 <Label Content="Id:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="0" VerticalAlignment="Center"/>
                 <TextBox x:Name="txtID" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="0" Text="{Binding Id, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120" TextChanged="txtID_TextChanged" />
                 <Label Content="Model:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="3" VerticalAlignment="Center"/>
-                <TextBox x:Name="txtModel" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="3" Text="{Binding Model, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120" PreviewTextInput="EnglishLettersValidationTextBox" TextChanged="txtModel_TextChanged"/>
+                <TextBox x:Name="txtModel"  Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="3" Text="{Binding Model, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120" PreviewTextInput="EnglishLettersValidationTextBox" TextChanged="txtModel_TextChanged"/>
                 <Label Content="Weight:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="4" VerticalAlignment="Center"/>
                 <ComboBox x:Name="WeightComboBox"  Text="{Binding Weight, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" Grid.Column="1"  HorizontalAlignment="Left" Height="Auto" Margin="3" Grid.Row="4" VerticalAlignment="Center" Width="120" SelectionChanged="WeightComboBox_SelectionChanged" />
 
@@ -59,7 +63,7 @@
                 <Label x:Name="priorityLabel" Content="Priority:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="9" VerticalAlignment="Center"/>
                 <ComboBox x:Name="priorityComboBox" Text="{Binding ParcelInDelivery.Priority, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}"  Grid.Column="1"  HorizontalAlignment="Left" Height="Auto" ItemsSource="{Binding}" Margin="3" Grid.Row="9" VerticalAlignment="Center" Width="120"/>
 
-                <Label x:Name="transportDistanceLabel" Content="Transport Distance:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="10" VerticalAlignment="Center"/>
+                <Label x:Name="transportDistanceLabel" Content="Transport Distance:"  Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="10" VerticalAlignment="Center"/>
                 <TextBox x:Name="transportDistanceTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="10" Text="{Binding ParcelInDelivery.TransportDistance, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120"/>
                 <Label  x:Name="weightComboBox1Label" Content="Parcel Weight:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="11" VerticalAlignment="Center"/>
                 <ComboBox x:Name="weightComboBox1"  Text="{Binding ParcelInDelivery.Weight, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" HorizontalAlignment="Left" Height="Auto" ItemsSource="{Binding}"  Margin="3,0,0,10" VerticalAlignment="Bottom" Width="120" Grid.Column="1" Grid.Row="11"/>
