--- a/PL/DroneList.xaml
+++ b/PL/DroneList.xaml
@@ -6,6 +6,9 @@
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
         Title="DroneList" Height="550" Width="900" Activated="Window_Activated"         Background="{StaticResource MyButtonBackground}">
+    <Window.Resources>
+        <local:ConvertToColor x:Key="ColorConverter" />
+    </Window.Resources>
     <Grid Name="MainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="9*"/>
@@ -37,7 +40,7 @@
         <DataGrid x:Name="droneToListDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="61,45,147,45" RowDetailsVisibilityMode="VisibleWhenSelected" Grid.Row="1" MouseDoubleClick="droneToListDataGrid_MouseDoubleClick" Background="#FFFAFAFA" OpacityMask="Black" Grid.Column="1">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="idColumn" Binding="{Binding Id}" Header="Id" Width="SizeToHeader"/>
-                <DataGridTextColumn x:Name="batteryStatusColumn" Binding="{Binding BatteryStatus, StringFormat={}{0:0.00}%}"  Header="Battery Status" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="batteryStatusColumn" Binding="{Binding BatteryStatus, Converter={StaticResource ColorConverter}, StringFormat={}{0:0.00}%}" Header="Battery Status" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="droneStatusColumn" Binding="{Binding DroneStatus}" Header="Drone Status" Width="SizeToHeader"/>
 
                 <DataGridTextColumn x:Name="modelColumn" Binding="{Binding Model}" Header="Model" Width="SizeToHeader"/>
