--- a/PL/DroneList.xaml
+++ b/PL/DroneList.xaml
@@ -5,9 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="DroneList" Height="550" Width="900" Activated="Window_Activated"         Background="{StaticResource MyButtonBackground}">
+        Title="DroneList" Height="550" Width="900" Activated="Window_Activated"  ResizeMode="NoResize" Background="{StaticResource MyButtonBackground}">
     <Window.Resources>
         <local:ConvertToColor x:Key="ColorConverter" />
+        <local:ConvertLongtitude x:Key="longtitudeConverter" />
+        <local:ConvertLatitude x:Key="latitudeConverter" />
+
     </Window.Resources>
     <Grid Name="MainGrid">
         <Grid.ColumnDefinitions>
@@ -26,18 +29,21 @@
 
         <Grid Name="UpGrid" Height="auto" Grid.Row="0" Width="auto" Grid.ColumnSpan="5">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="100*"/>
-                <ColumnDefinition Width="53*"/>
-                <ColumnDefinition Width="47*"/>
-                <ColumnDefinition Width="100*"/>
-                <ColumnDefinition Width="100*"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"/>
             </Grid.ColumnDefinitions >
             <ComboBox x:Name="StatusSelector" Grid.Column="1" Width="120" SelectionChanged="StatusSelector_SelectionChanged" Margin="52,25,53,-25" Grid.ColumnSpan="2"/>
             <ComboBox x:Name="WeightSelector" Grid.Column="4" Margin="53,22,52,-22" Width="120" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" SelectionChanged="WeightSelector_SelectionChanged"/>
             <Label Content="Drone Status" HorizontalAlignment="Center" Margin="0,22,0,0" VerticalAlignment="Top" Background="#FFDC2711" FontFamily="Arial Black" FontWeight="Normal"/>
             <Label Content="Drone Weight" Grid.Column="3" HorizontalAlignment="Center" Margin="0,25,0,0" VerticalAlignment="Top" Background="White" FontFamily="Arial Black" FontWeight="Normal"/>
         </Grid>
-        <DataGrid x:Name="droneToListDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="61,45,147,45" RowDetailsVisibilityMode="VisibleWhenSelected" Grid.Row="1" MouseDoubleClick="droneToListDataGrid_MouseDoubleClick"  OpacityMask="Black" Grid.Column="1" Background="#FFFAFAFA">
+        <DataGrid x:Name="droneToListDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="61,45,109,45" RowDetailsVisibilityMode="VisibleWhenSelected" Grid.Row="1" MouseDoubleClick="droneToListDataGrid_MouseDoubleClick"  OpacityMask="Black" Grid.Column="1" Background="#FFFAFAFA">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="idColumn" Binding="{Binding Id}" Header="Id" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="batteryStatusColumn"  Binding="{Binding BatteryStatus, StringFormat={}{0:0.00}%}"  Header="Battery Status" Width="SizeToHeader">
@@ -48,12 +54,11 @@
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
                 <DataGridTextColumn x:Name="droneStatusColumn" Binding="{Binding DroneStatus}" Header="Drone Status" Width="SizeToHeader"/>
-
                 <DataGridTextColumn x:Name="modelColumn" Binding="{Binding Model}" Header="Model" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="parcelNumberColumn" Binding="{Binding ParcelNumber}" Header="Parcel Number" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="weightColumn" Binding="{Binding Weight}" Header="Weight" Width="SizeToHeader"/>
-                <DataGridTextColumn x:Name="LatColunm" Binding="{Binding Location.Latitude  }" Header="Latitude" Width="SizeToHeader"/>
-                <DataGridTextColumn x:Name="LonColunm" Binding="{Binding Location.Longitude }" Header="Longitude" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="LatColunm" Binding="{Binding Location.Latitude ,Converter={StaticResource latitudeConverter}}"  Header="Latitude" Width="auto"/>
+                <DataGridTextColumn x:Name="LonColunm" Binding="{Binding Location.Longitude ,Converter={StaticResource longtitudeConverter}}" Header="Longitude" Width="auto"/>
 
             </DataGrid.Columns>
         </DataGrid>
